2004-03-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Add section for 1.70 release.
	* configure.in: Update for 1.69 dev version.
	* configure: Regenerated.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Add date to 1.68 release.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Update Automake & Autoconf versions in developer info section.

2004-03-20  Derek Price  <derek@ximbiot.com>

	* .cvsignore: Ignore the distribution archives.
	* Makefile.am (texi2html_SOURCES): Add and use to avoid having to
	maintain two lists of files.
	* configure.in: Update to version 1.68 for release.
	* Makefile.in, configure: Regenerated.
	* doc/stamp-vti, doc/version.texi: Regenerated.

2004-02-26  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl, texi2html.init: change $DOCUMENTDESCRIPTION to
	$DOCUMENT_DESCRIPTION for consistency.
	if $ENCODING is '' don't put it in the headers.
	add a new entry to $Texi2HTML::THISDOC: 'title_texi', the title
	with texinfo @-commands.
	* examples/chm.init: don't convert to utf8 in the html files 
	generated (unless the encoding is really utf8), but produce 
	utf8 in hhc, hhk and hhp files whatever the encoding is.
	* doc/texi2html.texi: update.

2004-02-23  Patrice Dumas  <dumas@centre-cired.fr> 

	* Makefile.am: ask for a version above 1.7 for automake.
	* Makefile.in...: regenerate with automake 1.8.2 autoconf 2.59.
	* texi2tml.pl, texi2html.init, examples/chm.init: add a new variable
	$DOCUMENTDESCRIPTION. If it is undef, @documentdescription is used
	or the long title. If it is set but empty no description <meta> element
	is used, if it isn't empty, the value is used in the description
	<meta> element.

2004-02-11  Patrice Dumas  <dumas@centre-cired.fr> 

	* Makefile.am: add T2h_i18n.pm texi2html.init MySimple.pm and l2h.init
	to the distribution.

2004-02-11  Patrice Dumas  <dumas@centre-cired.fr> 

	* texi2html.pl: use the manual name (file basename) as default output
	directory when split.